# libmockstar

./: .ccls  .gitignore  CMakeLists.txt  config.h.in  default.nix
include/: config.h
include/mockstar/: config.h  coverage.h  fuzzer.h  version.h
include/mockstar/internal/: utility.h
src/: coverage.c  coverage.cpp  fuzzer.c  fuzzer.cpp  utility.cpp  version.c  version.cpp
